# godot-lsp-mcp

./: .gitignore  LICENSE  README.md  godot.py  pyproject.toml  server.py
tests/: test_mcp.py
